--- a/app/src/main/res/layout/activity_new_payment.xml
+++ b/app/src/main/res/layout/activity_new_payment.xml
@@ -158,24 +158,6 @@
                         android:textSize="@dimen/text_size_1" />
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:hint="Receipt/Transaction No."
-                    android:textColorHint="@color/dark_green">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="text"
-                        android:text="@={vm.receiptNumber}"
-                        android:backgroundTint="#dbebd5"
-                        android:drawableEnd="@android:drawable/star_off"
-                        android:drawableTint="@color/font_color_red"
-                        android:textColor="@color/font_color_main"
-                        android:textSize="@dimen/text_size_1" />
-                </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
@@ -199,6 +181,26 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
 
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:hint="Receipt/Transaction No."
+                    android:textColorHint="@color/dark_green">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="text"
+                        android:drawableTint="@color/font_color_red"
+                        android:drawableEnd="@android:drawable/star_off"
+                        android:backgroundTint="#dbebd5"
+                        android:text="@={vm.receiptNumber}"
+                        android:textColor="@color/font_color_main"
+                        android:textSize="@dimen/text_size_1" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -217,6 +219,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:hint="Bank Name"
+                    android:textColorHint="@color/dark_green"
                     >
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -225,6 +228,8 @@
                         android:layout_height="wrap_content"
                         android:inputType="text"
                         android:focusable="false"
+                        android:backgroundTint="#dbebd5"
+                        android:drawableTint="@color/font_color_red"
                         android:onClick="@{()->activity.showCustomerBankDialog()}"
                         android:drawableEnd="@android:drawable/arrow_down_float"
                         android:textColor="@color/font_color_main"
@@ -235,16 +240,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:hint="Branch Name">
+                    android:hint="Branch Name"
+                    android:textColorHint="@color/dark_green">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="text"
+                        android:drawableTint="@color/font_color_red"
+                        android:drawableEnd="@android:drawable/star_off"
+                        android:backgroundTint="#dbebd5"
                         android:text="@={vm.customerBankBranch}"
                         android:textColor="@color/font_color_main"
                         android:textSize="@dimen/text_size_1" />
                 </com.google.android.material.textfield.TextInputLayout>
+
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
