--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -243,6 +243,31 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:weightSum="10">
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="3"
+                                android:text="Ship To:"
+                                android:textColor="@color/font_color_main"
+                                android:textSize="@dimen/text_size_1"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="7"
+                                android:text="@{vm.siteAddress}"
+                                android:textColor="@color/font_color_main"
+                                android:textSize="@dimen/text_size_1"
+                                android:hint="--"/>
+                        </LinearLayout>
+
+                        <LinearLayout
                             android:id="@+id/status_layout"
                             android:layout_marginTop="10dp"
                             android:layout_width="match_parent"
