--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -327,6 +327,7 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/order_lines_label"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Order Lines:"
