--- a/app/src/main/res/layout/dialog_item_filter.xml
+++ b/app/src/main/res/layout/dialog_item_filter.xml
@@ -57,6 +57,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/apply_btn"
