--- a/app/src/main/res/layout/listitem_order_sku.xml
+++ b/app/src/main/res/layout/listitem_order_sku.xml
@@ -81,7 +81,7 @@
                         android:layout_width="60dp"
                         android:layout_height="wrap_content"
                         android:background="@drawable/white_background"
-                        android:inputType="number"
+                        android:inputType="numberDecimal"
                         android:paddingStart="5dp"
                         android:paddingTop="10dp"
                         android:paddingEnd="5dp"
