- Device info added on login - CustomerNumber filter added in order list.

--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -333,8 +333,6 @@
                                 />
                         </com.google.android.material.textfield.TextInputLayout>
 
-
-
                     </LinearLayout>
 
                     <LinearLayout
@@ -356,7 +354,7 @@
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/order_lines_list"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="400dp"
                             />
 
                         <LinearLayout
